@@ -1,3 +1,4 @@
+// -*- mode: C++; c-file-style: "gnu"; indent-tabs-mode: nil; c-basic-offset: 2 -*-
 #ifndef __ROSTER_MERGE_HH__
 #define __ROSTER_MERGE_HH__
 
@@ -107,6 +108,9 @@ struct roster_merge_result
   // this roster is sane if is_clean() returns true
   roster_t roster;
   bool is_clean();
+  bool is_clean_except_for_content();
+  void log_conflicts();
+  void warn_non_content_conflicts();
   void clear();
 };
 
